Fix: tags, overlap, style

--- a/css/cart.css
+++ b/css/cart.css
@@ -14,7 +14,7 @@ body {
 .navbar {
   background-color: #333;
   color: white;
-  padding: 10px;
+  padding: 15px;
   text-align: center;
 }
 
@@ -30,7 +30,7 @@ body {
 }
 
 .cart-container {
-  margin-bottom: 40%;
+  margin-bottom: 45%;
 }
 
 h1 {
@@ -44,7 +44,7 @@ h1 {
   align-items: flex-start;
   background-color: white;
   padding: 15px;
-  margin-bottom: 10px;
+  margin: 0 10px 10px 10px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -88,9 +88,9 @@ h1 {
   border-radius: 4px;
   width: 100%;
 }
-.quantity-controls>span{
-    font-weight: bold   ;
-    margin: 0 10px;
+.quantity-controls > span {
+  font-weight: bold;
+  margin: 0 10px;
 }
 .remove-button {
   background-color: red;
@@ -134,25 +134,24 @@ h1 {
   right: 5%;
   bottom: 10%;
   font-weight: bold;
-  z-index: 10000;
+  z-index: 1000;
 }
 .cart-total button {
-  background-color: white; 
-  color: #333; 
-  border: none; 
-  padding: 10px 20px; 
-  font-size: 16px; 
-  font-weight: bold; 
-  border-radius: 5px; 
-  cursor: pointer; 
-  margin-top: 10px; 
-  transition: background-color 0.3s ease, transform 0.2s ease; 
+  background-color: white;
+  color: #333;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .cart-total button:hover {
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
-
 
 .bottom-nav {
   position: fixed;
