--- a/css/menu.css
+++ b/css/menu.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  margin: 0;
   font-family: "Poppins", sans-serif;
   -webkit-tap-highlight-color: transparent;
   outline: none;
@@ -323,7 +324,7 @@ body {
   }
   .menu-container {
     margin: 0;
-    margin-bottom: 15%;
+    margin-bottom: 30%;
     padding: 0;
   }
   .food-item {
