--- a/css/user.css
+++ b/css/user.css
@@ -3,6 +3,8 @@
 }
 body {
   font-family: "Poppins", sans-serif;
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
   margin: 0;
   padding: 0;
   background-color: #f8f9fa;
